<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ittranjunho.InformacoesInfracao" >

    <!-- Itens action-bar do menu overflow -->
   
   
    <item 
        android:id="@+id/action_nova_multa"
        android:title="@string/action_nova_multa"   
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_nova_multa"
        />
    
       /> -->  
    
    
     <item 
        android:id="@+id/action_sincronizar"
        android:title="@string/action_sincronizar"
        android:showAsAction="never"
        android:actionViewClass="android.suport.v7.widget.SearchView"
        />
    
    <item 
        android:id="@+id/action_sobre"
        android:title="@string/action_sobre"
        android:showAsAction="never"
        android:actionViewClass="android.suport.v7.widget.SearchView"
        />

    <item
        android:id="@+id/action_sair"
        android:title="@string/action_sair"
        android:showAsAction="never"
        android:actionViewClass="android.suport.v7.widget.SearchView"
     	/>
    
    

</menu>
