<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    
      
    
    <LinearLayout
          android:id="@+id/login"          
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"  
          android:layout_marginTop="40dp"   >
    
     <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="50sp"
        android:textStyle="bold" />
     
      </LinearLayout>
      
<LinearLayout
    android:id="@+id/inputs"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:gravity="center"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/inputlogin"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

     </LinearLayout>

<LinearLayout
    android:id="@+id/inputs2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>
	</LinearLayout>
	
<LinearLayout
    android:id="@+id/check_box"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="horizontal" >
    
    
    <CheckBox
        android:id="@+id/continuar_conectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar_concetado" 
       />
</LinearLayout>

<LinearLayout
    android:id="@+id/button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp"
    android:gravity="center"
    android:orientation="vertical" >
    
        <Button
            android:id="@+id/button_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textSize="25sp" />

       
</LinearLayout>


        </LinearLayout>
    

