<?xml version="1.0" encoding="utf-8"?>
<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ittranjunho.Login"
    tools:ignore="MergeRootFrame" /> -->

    

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   
    
    <LinearLayout
          android:id="@+id/login"          
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"  
          android:layout_marginTop="80dp"   >
    
     <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="50sp"
        android:textStyle="bold" />
     
      </LinearLayout>
      
<LinearLayout
          android:id="@+id/inputs"          
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"  
          android:layout_marginTop="100dp"   >

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

     </LinearLayout>

<LinearLayout
    android:id="@+id/inputs2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/continuar_conectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar_concetado" 
        android:layout_marginTop="20dp"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:gravity="center"
    android:orientation="vertical" >
    
        <Button
            android:id="@+id/button_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textSize="25sp" />

       
</LinearLayout>


        </LinearLayout>
    

