<?xml version="1.0" encoding="utf-8"?>

<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ittranjunho.InformacoesInfracao"
    tools:ignore="MergeRootFrame" />
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container" >
  
	 <LinearLayout
	        android:id="@+id/linearvertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="vertical"
	        android:gravity="center" >
	
	        <TextView
	            android:id="@+id/title_condutor"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/title_condutor"
	            android:textSize="35sp"
	            android:layout_marginTop="20sp" />
		</LinearLayout>
	
	        <LinearLayout
	            android:id="@+id/condutor"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical" 
	            android:layout_marginLeft="40dp"
	            android:layout_marginRight="40dp"
	            android:layout_marginTop="80dp"
	            android:layout_marginBottom="40dp">

	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/nome_condutor"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/lbl_nome_condutor"
	                    android:textSize="20sp" 
	                    android:layout_weight="0"/>
	                
	                <EditText
	                    android:id="@+id/input_nome_condutor"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content" 
	                    android:layout_weight="0"
	                    android:inputType="text" >

	                    <requestFocus />
	                </EditText>
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/radio_cnh_ppd"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="30dp"
	                android:orientation="horizontal" >

	                <RadioButton
	                    android:id="@+id/radio_cnh"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/radio_cnh" 
	                    android:layout_weight="0"/>
	                
	                <RadioButton
	                    android:id="@+id/radio_ppd"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/radio_ppd" 
	                    android:layout_marginLeft="10dp"
	                    android:layout_weight="0"/>

	                <EditText
	                    android:id="@+id/input_cnh_ppd"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="20dp"
	                    android:ems="10"
	                    android:inputType="text"
	                    android:hint="@string/input_cnh_ppd"
	                    android:layout_weight="0" />
	                
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/radio_cpf_rg"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="30dp"
	                android:orientation="horizontal">
	                
	                <RadioButton
	                    android:id="@+id/radio_cpf"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/radio_cpf" 
	                    android:layout_weight="0"/>
	                
	                <RadioButton
	                    android:id="@+id/radio_rg"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="10dp"
	                    android:text="@string/radio_rg"
	                    android:layout_weight="0" />

	                <EditText
	                    android:id="@+id/input_cpf_rg"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="20dp"
	                    android:layout_gravity="right"
	                    android:ems="10"
	                    android:inputType="text"
	                    android:hint="@string/input_cpf_rg" 
	                    android:layout_weight="0"/>
	                
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/nf"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:layout_marginTop="30dp"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/lbl_nf"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/lbl_nf" 
	                    android:textSize="20sp"
	                    android:layout_weight="0"/>
	                
	                 <EditText
	                    android:id="@+id/input_nf"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:ems="10"
	                    android:inputType="text"
	                    android:layout_weight="0"
	                    />
	                
	            </LinearLayout>
	            
	             <LinearLayout
	                 android:id="@+id/buttons3"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_gravity="center"
	                 android:layout_marginTop="320dp"
	                 android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_back2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_back" 
                    android:layout_weight="0"
                    />
                
                  <Button
                      android:id="@+id/button_save"
                      android:layout_width="wrap_content"
                      android:layout_height="65dp"
                      android:layout_gravity="center"
                      android:layout_marginLeft="20dp"
                      android:background="@drawable/icon_save" 
                      android:layout_weight="0"/>
            
            </LinearLayout>
	            
   			</LinearLayout>
    
 </LinearLayout>

